Dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,7 @@
     .card { background-color: #27282E; }
     .background-fade { background: linear-gradient(0deg, rgba(26,27,32,1) 0%, rgba(26,27,32,0) 100%); }
     footer { background-color: black;}
+    .copyright-notice a { color: white; }
   )
   
   }
